Add log food endpoint
