# src/Infrastructure/Validation/LogFoodConsumptionValidation.php
@@ -1,0 +1,16 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Infrastructure\Validation;
+
+final class LogFoodConsumptionValidation extends AbstractValidation
+{
+    protected function getValidationRules(): array
+    {
+        return [
+            'name' => 'required',
+            'date_time' => 'nullable',
+        ];
+    }
+}
